Add link to requirements

--- a/src/registrar/templates/application_purpose.html
+++ b/src/registrar/templates/application_purpose.html
@@ -8,7 +8,7 @@ domain name or for mainly internal use.</p>
   <p>Describe the reason for your domain request. Explain how you plan to use this domain. 
 Who is your intended audience? Will you use it for a website and/or email? Are you moving 
 your website from another top-level domain (like .com or .org)? 
-Read about <a href="{% url 'todo' %}">activities that are prohibited on .gov domains.</a></p>
+Read about <a href="{% url 'https://federalist-877ab29f-16f6-4f12-961c-96cf064cf070.sites.pages.cloud.gov/site/cisagov/getgov-home/domains/requirements/' %}">activities that are prohibited on .gov domains.</a></p>
 
 {% endblock %}
 
