Add public_site_url template tag

--- a/src/registrar/templates/application_purpose.html
+++ b/src/registrar/templates/application_purpose.html
@@ -1,5 +1,5 @@
 {% extends 'application_form.html' %}
-{% load field_helpers %}
+{% load field_helpers url_helpers %}
 
 {% block form_instructions %}
   <p>.Gov domain names are for use on the internet. Don’t register a .gov to simply reserve a 
@@ -8,7 +8,7 @@ domain name or for mainly internal use.</p>
   <p>Describe the reason for your domain request. Explain how you plan to use this domain. 
 Who is your intended audience? Will you use it for a website and/or email? Are you moving 
 your website from another top-level domain (like .com or .org)? 
-Read about <a href="{% url 'todo' %}">activities that are prohibited on .gov domains.</a></p>
+Read about <a href="{% public_site_url 'domains/requirements/' %}">activities that are prohibited on .gov domains.</a></p>
 
 {% endblock %}
 
