--- a/src/registrar/templates/domain_sidebar.html
+++ b/src/registrar/templates/domain_sidebar.html
@@ -31,7 +31,7 @@
       </li>      
 
       <li class="usa-sidenav__item">
-        {% url 'todo' as url %}
+        {% url 'domain-authorizing-official' pk=domain.id as url %}
         <a href="{{ url }}"
           {% if request.path == url %}class="usa-current"{% endif %}
         >
