--- a/src/registrar/templates/domain_detail.html
+++ b/src/registrar/templates/domain_detail.html
@@ -3,31 +3,31 @@
 
 {% block domain_content %}
   {{ block.super }}
-  <p>Active: {% if domain.is_active %}Yes{% else %}No{% endif %}</p>
-  org type: {{domain.domain_info.organization_type}}
+  <div class="margin-top-4 tablet:grid-col-10">
 
-  {% url 'domain-nameservers' pk=domain.id as url %}
-  {% include "includes/summary_item.html" with title='DNS name servers' value=domain.nameservers list='true' edit_link=url %}
+    {% url 'domain-nameservers' pk=domain.id as url %}
+    {% if domain.nameservers %} 
+      {% include "includes/summary_item.html" with title='DNS name servers' value=domain.nameservers list='true' edit_link=url %}
+    {% else %}
+      <h2 class="margin-top-neg-1"> DNS name servers </h2>
+      <p> No DNS name servers have been added yet. Before your domain can be used we’ll need information about your domain name servers.</p>
+      <a class="usa-button margin-bottom-1" href="{{url}}"> Add DNS name servers </a> 
+    {% endif %}
 
-  {% url 'todo' as url %}
-  {% if domain.domain_info.organization_name %}
+    {% url 'todo' as url %}
     {% include "includes/summary_item.html" with title='Organization name and mailing address' value=domain.domain_info address='true' edit_link=url %}
-  {% endif %}
 
-  {% if domain.domain_info.authorizing_official %}
     {% url 'todo' as url %}
     {% include "includes/summary_item.html" with title='Authorizing official' value=domain.domain_info.authorizing_official contact='true' edit_link=url %}
-  {% endif %}
 
-  {% if domain.domain_info.submitter %}
     {% url 'todo' as url %}
     {% include "includes/summary_item.html" with title='Your contact information' value='---TODO---' edit_link=url %}
-  {% endif %}
 
-  {% url 'todo' as url %}
-  {% include "includes/summary_item.html" with title='Security email' value=domain.domain_info.security_email edit_link=url %}
+    {% url 'todo' as url %}
+    {% include "includes/summary_item.html" with title='Security email' value=domain.domain_info.security_email edit_link=url %}
 
-  {% url 'domain-users' pk=domain.id as url %}
-  {% include "includes/summary_item.html" with title='User management' users='true' value=domain.permissions.all edit_link=url %}
+    {% url 'domain-users' pk=domain.id as url %}
+    {% include "includes/summary_item.html" with title='User management' users='true' value=domain.permissions.all edit_link=url %}
 
+  </div>
 {% endblock %}  {# domain_content #}
