Make domain overview sentance case in sidebar

--- a/src/registrar/templates/domain_sidebar.html
+++ b/src/registrar/templates/domain_sidebar.html
@@ -8,7 +8,7 @@
         <a href="{{ url }}" 
           {% if request.path == url %}class="usa-current"{% endif %}
         >
-          Domain Overview
+          Domain overview
         </a>
       </li>
 
