--- a/src/registrar/templates/includes/summary_item.html
+++ b/src/registrar/templates/includes/summary_item.html
@@ -36,7 +36,7 @@
 
       {% elif list %}
         {% if value|length == 1 %}
-          <p class="margin-top-0">{{ value | first }} </p>
+          <p class="margin-top-0 margin-bottom-0">{{ value | first }} </p>
         {% else %}
           <ul class="usa-list margin-top-0">
             {% for item in value %}
@@ -49,7 +49,7 @@
 
       {% elif users %}
         {% if value|length == 1 %}
-            <p class="margin-top-0">{{ user.email }} <span class="padding-left-2px text-base"> ({{ value.first.role }}) </span></p>
+            <p class="margin-top-0 margin-bottom-0">{{ user.email }} <span class="padding-left-2px text-base"> ({{ value.first.role }}) </span></p>
         {% else %}
           <ul class="usa-list usa-list--unstyled margin-top-0">
           {% for item in value %}
