--- a/src/registrar/templates/base.html
+++ b/src/registrar/templates/base.html
@@ -61,18 +61,13 @@
   <a class="usa-skipnav" href="#main-content">Skip to main content</a>
 
   {% if IS_DEMO_SITE %}
-    <section
-    class="usa-site-alert usa-site-alert--emergency usa-site-alert--no-icon"
-    aria-label="Site alert"
-    >
-      <div class="usa-alert">
-        <div class="usa-alert__body">
-          <p class="usa-alert__text">
-          <strong>BETA SITE:</strong> We’re building a new way to get a .gov. Take a look around, but don’t rely on this site yet. This site is for testing purposes only. Don’t enter real data into any form on this site. To learn about requesting a .gov domain, visit <a href="https://get.gov" class="usa-link">get.gov</a>
-          </p>
-        </div>
+      <div class="usa-alert usa-alert--warning usa-alert--no-icon">
+      <div class="usa-alert__body">
+        <p class="usa-alert__text">
+        <strong>BETA SITE:</strong> We’re building a new way to get a .gov. Take a look around, but don’t rely on this site yet. This site is for testing purposes only. Don’t enter real data into any form on this site. To learn about requesting a .gov domain, visit <a href="https://get.gov" class="usa-link">get.gov</a>
+        </p>
       </div>
-    </section>
+    </div>
   {% endif %}
 
   <section class="usa-banner" aria-label="Official website of the United States government">
