--- a/src/registrar/templates/base.html
+++ b/src/registrar/templates/base.html
@@ -68,7 +68,7 @@
       <div class="usa-alert">
         <div class="usa-alert__body">
           <p class="usa-alert__text">
-            <strong>TEST SITE</strong> - Do not use real personal information. Demo purposes only.
+            <strong>BETA SITE</strong> - BETA SITE: We're building a <a href="https://get.gov/updates/2022/9/14/making-infrastructure-less-invisible/">new way to get a .gov</a>. Take a look around, but don't rely on this site yet. This site is for testing purposes only. Don’t enter real data into any form on this site. To learn about requesting a .gov domain, visit <a href="https://get.gov/">get.gov</a>.
           </p>
         </div>
       </div>
