Added <section> code back

--- a/src/registrar/templates/base.html
+++ b/src/registrar/templates/base.html
@@ -61,6 +61,7 @@
   <a class="usa-skipnav" href="#main-content">Skip to main content</a>
 
   {% if IS_DEMO_SITE %}
+  <section aria-label="Alert" >
       <div class="usa-alert usa-alert--warning usa-alert--no-icon">
       <div class="usa-alert__body">
         <p class="usa-alert__text">
@@ -68,6 +69,7 @@
         </p>
       </div>
     </div>
+       </section>
   {% endif %}
 
   <section class="usa-banner" aria-label="Official website of the United States government">
