updated sr-only tag to match the section its in

--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -22,7 +22,7 @@
     <h2>Registered domains</h2>
     {% if domains %}
     <table class="usa-table usa-table--borderless usa-table--stacked dotgov-table dotgov-table--stacked">
-      <caption class="sr-only">Your domain applications</caption>
+      <caption class="sr-only">Your registered domains</caption>
       <thead>
         <tr>
           <th data-sortable scope="col" role="columnheader">Domain name</th>
