--- a/src/registrar/templates/includes/summary_item.html
+++ b/src/registrar/templates/includes/summary_item.html
@@ -17,7 +17,7 @@
           {% for item in value %}
           <li>
             <p class="text-semibold margin-top-1 margin-bottom-0">
-              Conatct {{forloop.counter}}
+              Contact {{forloop.counter}}
             </p>
             {% include "includes/contact.html" with contact=item %}</li>
           {% empty %}
