Review feedback: fix user management display, use h2

--- a/src/registrar/templates/domain_detail.html
+++ b/src/registrar/templates/domain_detail.html
@@ -21,13 +21,13 @@
     {% include "includes/summary_item.html" with title='Authorizing official' value=domain.domain_info.authorizing_official contact='true' edit_link=url %}
 
     {% url 'todo' as url %}
-    {% include "includes/summary_item.html" with title='Your contact information' value='---TODO---' edit_link=url %}
+    {% include "includes/summary_item.html" with title='Your contact information' value=request.user.contact edit_link=url %}
 
     {% url 'domain-security-email' pk=domain.id as url %}
     {% include "includes/summary_item.html" with title='Security email' value=domain.security_email edit_link=url %}
 
     {% url 'domain-users' pk=domain.id as url %}
-    {% include "includes/summary_item.html" with title='User management' users='true' value=domain.permissions.all edit_link=url %}
+    {% include "includes/summary_item.html" with title='User management' users='true' list=True value=domain.permissions.all edit_link=url %}
 
   </div>
 {% endblock %}  {# domain_content #}
