--- a/src/registrar/templates/application_authorizing_official.html
+++ b/src/registrar/templates/application_authorizing_official.html
@@ -8,7 +8,7 @@
 
   <p>Your authorizing official is the person within your organization who can authorize
   your domain request. This is generally the highest-ranking or highest-elected official
-  in your organization. Read more about <a href="{% url 'todo' %}">who can serve as an
+  in your organization. Read more about <a href="{% public_site_url 'domains/eligibility/#you-must-have-approval-from-an-authorizing-official-within-your-organization' %}">who can serve as an
   authorizing official</a>.</p>
 
   <div class="ao_example">
