--- a/src/registrar/templates/application_authorizing_official.html
+++ b/src/registrar/templates/application_authorizing_official.html
@@ -12,10 +12,10 @@
     {% include "includes/ao_example.html" %}
   </div>
 
-  <p>We might contact your authorizing official, or their office, to double check that they approve this request.</p>
+  <p>We might contact your authorizing official, or their office, to double check that they approve this request. Read more about <a href="{% public_site_url 'domains/eligibility/#you-must-have-approval-from-an-authorizing-official-within-your-organization' %}">who can serve as an authorizing official</a>.</p>
+
 {% endblock %}
 
-<p>Read more about <a href="{% public_site_url 'domains/eligibility/#you-must-have-approval-from-an-authorizing-official-within-your-organization' %}">who can serve as an authorizing official</a>.</p>
 
 {% block form_fields %}
   <fieldset class="usa-fieldset">
