--- a/src/registrar/templates/application_dotgov_domain.html
+++ b/src/registrar/templates/application_dotgov_domain.html
@@ -2,7 +2,7 @@
 {% load static field_helpers %}
 
 {% block form_instructions %}
-  <p>Before requesting a .gov domain, <a href="{% url 'todo' %}">please make sure it
+  <p>Before requesting a .gov domain, <a href="{% public_site_url 'domains/choosing' %}">please make sure it
   meets our naming requirements.</a> Your domain name must:
     <ul class="usa-list">
       <li>Be available </li>
