--- a/src/registrar/templates/application_dotgov_domain.html
+++ b/src/registrar/templates/application_dotgov_domain.html
@@ -3,7 +3,7 @@
 
 {% block form_instructions %}
   <p>Before requesting a .gov domain, <a href="{% public_site_url 'domains/choosing' %}">please make sure it
-  meets our naming requirements.</a> Your domain name must:
+  meets our naming requirements</a>. Your domain name must:
     <ul class="usa-list">
       <li>Be available </li>
       <li>Be unique </li>
