Reduce size of summary item heading

--- a/src/registrar/templates/includes/summary_item.html
+++ b/src/registrar/templates/includes/summary_item.html
@@ -5,6 +5,7 @@
   <div class="display-flex flex-justify">
     <div>
     <h2 class="summary-item__title
+              font-sans-md
               text-primary-dark text-semibold
               margin-top-0 margin-bottom-05"
     >
