Remove stray closing tags

--- a/src/registrar/templates/includes/summary_item.html
+++ b/src/registrar/templates/includes/summary_item.html
@@ -27,7 +27,7 @@
               {% include "includes/contact.html" with contact=item %}</li>
             {% empty %}
              <li>None</li>
-            {% endfor %}</ul></p>
+            {% endfor %}
           </ul>
         {% endif %}
       {% else %}
@@ -50,7 +50,7 @@
           {% endif %}
           {% empty %}
            <li>None</li>
-          {% endfor %}</ul></p>
+          {% endfor %}
         </ul>
       {% endif %}
     {% else %}
