Adding one unit of right padding to summary item titles

--- a/src/registrar/templates/includes/summary_item.html
+++ b/src/registrar/templates/includes/summary_item.html
@@ -12,7 +12,8 @@
       class="summary-item__title
              font-sans-md
              text-primary-dark text-semibold
-             margin-top-0 margin-bottom-05"
+             margin-top-0 margin-bottom-05
+             padding-right-1"
       >
         {{ title }}
     {% if heading_level %}
