--- a/src/registrar/templates/includes/summary_item.html
+++ b/src/registrar/templates/includes/summary_item.html
@@ -78,7 +78,7 @@
       <div class="text-right">
       <a
           href="{{ edit_link }}"
-          class="usa-link"
+          class="usa-link font-sans-sm"
       >
         Edit<span class="sr-only"> {{ title }}</span>
       </a>
