Text and link updates / public site URL test

--- a/src/registrar/templates/application_authorizing_official.html
+++ b/src/registrar/templates/application_authorizing_official.html
@@ -1,22 +1,19 @@
 {% extends 'application_form.html' %}
-{% load field_helpers %}
+{% load field_helpers url_helpers %}
 
 {% block form_instructions %}
   <h2 class="margin-bottom-05">
     Who is the authorizing official for your organization?
   </h2>
 
-  <p>Your authorizing official is the person within your organization who can authorize
-  your domain request. This is generally the highest-ranking or highest-elected official
-  in your organization. Read more about <a href="{% url 'todo' %}">who can serve as an
-  authorizing official</a>.</p>
+<p>Your authorizing official is the person within your organization who can authorize your domain request. This is generally the highest-ranking or highest-elected official in your organization.</p>
 
   <div class="ao_example">
     {% include "includes/ao_example.html" %}
   </div>
 
-  <p>We’ll contact your authorizing official to let them know that you made this request
-  and to double check that they approve it.</p>
+<p>We might contact your authorizing official, or their office, to double check that they approve this request. Read more about <a href="{% public_site_url 'domains/eligibility/#you-must-have-approval-from-an-authorizing-official-within-your-organization' %}">who can serve as an authorizing official</a>.</p>
+
 {% endblock %}
 
 
