--- a/src/registrar/templates/includes/footer.html
+++ b/src/registrar/templates/includes/footer.html
@@ -26,7 +26,7 @@
             <address class="usa-footer__address">
               <div class="usa-footer__contact-info grid-row grid-gap-md">
                 <div class="grid-col-auto">
-                  <a href="https://federalist-877ab29f-16f6-4f12-961c-96cf064cf070.sites.pages.cloud.gov/site/cisagov/getgov-home/help/"> Help </a>
+                  <a href="{% public_site_url 'help' %}"> Help </a>
                 </div>
                 <span class=""> | </span>
                 <div class="grid-col-auto">
