--- a/src/registrar/templates/includes/footer.html
+++ b/src/registrar/templates/includes/footer.html
@@ -30,7 +30,7 @@
                 </div>
                 <span class=""> | </span>
                 <div class="grid-col-auto">
-                  <a href="https://federalist-877ab29f-16f6-4f12-961c-96cf064cf070.sites.pages.cloud.gov/site/cisagov/getgov-home/contact/" class="usa-link">Contact us</a>
+                  <a href="{% public_site_url 'contact' %}" class="usa-link">Contact us</a>
                 </div>
               </div>
             </address>
