--- a/src/registrar/templates/includes/footer.html
+++ b/src/registrar/templates/includes/footer.html
@@ -26,7 +26,7 @@
             <address class="usa-footer__address">
               <div class="usa-footer__contact-info grid-row grid-gap-md">
                 <div class="grid-col-auto">
-                  <a href="{% public_site_url 'help' %}"> Help </a>
+                  <a href="{% public_site_url 'help' %}" class="usa-link"> Help </a>
                 </div>
                 <span class=""> | </span>
                 <div class="grid-col-auto">
