--- a/src/registrar/templates/includes/footer.html
+++ b/src/registrar/templates/includes/footer.html
@@ -74,7 +74,7 @@
         <ul class="usa-identifier__required-links-list">
           <li class="usa-identifier__required-links-item">
             <a
-              href="https://federalist-877ab29f-16f6-4f12-961c-96cf064cf070.sites.pages.cloud.gov/site/cisagov/getgov-home/about/"
+              href="{% public_site_url 'about' %}"
               class="usa-identifier__required-link usa-link"
               >About .gov</a
             >
