--- a/src/registrar/templates/includes/footer.html
+++ b/src/registrar/templates/includes/footer.html
@@ -87,7 +87,7 @@
             >
           </li>
           <li class="usa-identifier__required-links-item">
-            <a href="https://federalist-877ab29f-16f6-4f12-961c-96cf064cf070.sites.pages.cloud.gov/site/cisagov/getgov-home/privacy-policy/" class="usa-identifier__required-link usa-link"
+            <a href="{% public_site_url 'privacy-policy' %}" class="usa-identifier__required-link usa-link"
               >Privacy policy</a
             >
           </li>
