--- a/src/registrar/templates/includes/footer.html
+++ b/src/registrar/templates/includes/footer.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load field_helpers url_helpers %}
 
 <footer class="usa-footer">
     <div class="usa-footer__secondary-section">
