--- a/src/registrar/templates/application_dotgov_domain.html
+++ b/src/registrar/templates/application_dotgov_domain.html
@@ -2,8 +2,8 @@
 {% load static field_helpers url_helpers %}
 
 {% block form_instructions %}
-  <p>Before requesting a .gov domain, <a href=<a href="{% public_site_url 'domains/choosing' %}">please make sure it
-  meets our naming requirements.</a> Your domain name must:
+  <p>Before requesting a .gov domain, <a href="{% public_site_url 'domains/choosing' %}">please make sure it
+  meets our naming requirements</a>. Your domain name must:
     <ul class="usa-list">
       <li>Be available </li>
       <li>Be unique </li>
