--- a/src/registrar/templates/403.html
+++ b/src/registrar/templates/403.html
@@ -22,12 +22,12 @@
       {% endif %}
       <p>
         You must be an authorized user and need to be signed in to view this page. 
-        Would you like to <a href="{% url 'login' %}"> try logging in again?</a>
+        Would you like to <a href="{% url 'login' %}"> try logging in again</a>?
       </p>
       <p>
-        If you would like help with this error <a href="https://federalist-877ab29f-16f6-4f12-961c-96cf064cf070.sites.pages.cloud.gov/site/cisagov/getgov-home/contact/"> contact us </a>
+        If you'd like help with this error <a href="{% public_site_url 'contact' %}"> contact us </a>.
       </p>
-
+      
       {% if log_identifier %}
         <p>Here's a unique identifier for this error.</p>
         <p class="text-semibold">{{ log_identifier }}</p>
