--- a/src/registrar/templates/403.html
+++ b/src/registrar/templates/403.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load i18n static %}
-{% load field_helpers url_helpers %}
+{% load url_helpers %}
 
 {% block title %}{% translate "Forbidden | " %}{% endblock %}
 
