--- a/src/registrar/templates/domain_authorizing_official.html
+++ b/src/registrar/templates/domain_authorizing_official.html
@@ -1,5 +1,5 @@
 {% extends "domain_base.html" %}
-{% load static field_helpers%}
+{% load static field_helpers url_helpers %}
 
 {% block title %}Domain authorizing official | {{ domain.name }} | {% endblock %}
 
@@ -11,9 +11,7 @@
 
   <p>Your authorizing official is the person within your organization who can
   authorize domain requests. This is generally the highest-ranking or
-  highest-elected official in your organization. <a class="usa-link"
-    href="https://federalist-877ab29f-16f6-4f12-961c-96cf064cf070.sites.pages.cloud.gov/site/cisagov/getgov-home/domains/eligibility/#you-must-have-approval-from-an-authorizing-official-within-your-organization">Read more about who can serve
-    as an authorizing official.</a></p>
+  highest-elected official in your organization. Read more about <a class="usa-link" href="{% public_site_url 'domains/eligibility/#you-must-have-approval-from-an-authorizing-official-within-your-organization' %}">who can serve as an authorizing official</a>.</p>
 
   {% include "includes/required_fields.html" %}
 
