--- a/src/registrar/templates/includes/footer.html
+++ b/src/registrar/templates/includes/footer.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% load field_helpers url_helpers %}
+{% load url_helpers %}
 
 <footer class="usa-footer">
     <div class="usa-footer__secondary-section">
