--- a/src/registrar/templates/includes/footer.html
+++ b/src/registrar/templates/includes/footer.html
@@ -27,11 +27,11 @@
             <address class="usa-footer__address">
               <div class="usa-footer__contact-info grid-row grid-gap-md">
                 <div class="grid-col-auto">
-                   <a href="{% public_site_url 'help' %}" class="usa-link"> Help </a>
+                   <a href="{% public_site_url 'help/' %}" class="usa-link"> Help </a>
                 </div>
                 <span class=""> | </span>
                 <div class="grid-col-auto">
-                  <a href="{% public_site_url 'contact' %}" class="usa-link">Contact us</a>
+                  <a href="{% public_site_url 'contact/' %}" class="usa-link">Contact us</a>
                 </div>
               </div>
             </address>
@@ -74,7 +74,7 @@
       <div class="usa-identifier__container">
         <ul class="usa-identifier__required-links-list">
           <li class="usa-identifier__required-links-item">
-        <a href="{% public_site_url 'about' %}"
+        <a href="{% public_site_url 'about/' %}"
               class="usa-identifier__required-link usa-link">About .gov</a>
           </li>
           <li class="usa-identifier__required-links-item">
@@ -85,7 +85,7 @@
             >
           </li>
           <li class="usa-identifier__required-links-item">
- <a href="{% public_site_url 'privacy-policy' %}" class="usa-identifier__required-link usa-link">Privacy policy</a>
+ <a href="{% public_site_url 'privacy-policy/' %}" class="usa-identifier__required-link usa-link">Privacy policy</a>
           </li>
           <li class="usa-identifier__required-links-item">
             <a href="https://www.dhs.gov/accessibility" class="usa-identifier__required-link usa-link usa-link--external"
