Link and text updates (#700)
* Update application_dotgov_domain.html

* Update footer.html

* Update application_authorizing_official.html

* Update application_dotgov_domain.html

* Update 403.html

* Update 403.html

* Update 500.html

* Update 500.html

* Update 403.html

* Update 404.html

* Update domain_security_email.html

* Update 401.html

* Update domain_authorizing_official.html

* Update src/registrar/templates/includes/footer.html

Co-authored-by: Neil MartinsenBurrell <neil.martinsen-burrell@gsa.gov>

* Remove todo styling from public site links

* Update 401.html

* Update footer.html

---------

Co-authored-by: Neil MartinsenBurrell <neil.martinsen-burrell@gsa.gov>
Co-authored-by: igorkorenfeld <igor.korenfeld@gsa.gov>

--- a/src/registrar/templates/application_dotgov_domain.html
+++ b/src/registrar/templates/application_dotgov_domain.html
@@ -1,9 +1,9 @@
 {% extends 'application_form.html' %}
-{% load static field_helpers %}
+{% load static field_helpers url_helpers %}
 
 {% block form_instructions %}
-  <p>Before requesting a .gov domain, <a href="{% url 'todo' %}">please make sure it
-  meets our naming requirements.</a> Your domain name must:
+  <p>Before requesting a .gov domain, <a href="{% public_site_url 'domains/choosing' %}">please make sure it
+  meets our naming requirements</a>. Your domain name must:
     <ul class="usa-list">
       <li>Be available </li>
       <li>Be unique </li>
