--- a/src/registrar/templates/base.html
+++ b/src/registrar/templates/base.html
@@ -152,7 +152,7 @@
         <ul class="usa-nav__primary usa-accordion">
           <li class="usa-nav__primary-item">
             {% if user.is_authenticated %}
-            <a href="{% url 'whoami' %}"><span>{{ user.email }}</span></a>
+            <span>{{ user.email }}</span>
           </li>
           <li class="usa-nav__primary-item display-flex flex-align-center">
             <span class="text-base"> | </span>
