--- a/src/registrar/templates/includes/domain_example.html
+++ b/src/registrar/templates/includes/domain_example.html
@@ -81,7 +81,7 @@
   </p>
 
 {% elif organization_type == 'special_district' %}
-  <p>Domain names must represent your organization or institutional name, not solely the services you provide. It also needs to include your two-letter state abbreviation or clearly spell out the state name unless <a href="{% public_site_url 'domains/choosing/#counties' %}">city or county exceptions apply</a>.</p>
+  <p>Domain names must represent your organization or institutional name, not solely the services you provide. It also needs to include your two-letter state abbreviation or clearly spell out the state name unless <a href="{% public_site_url 'domains/choosing/#counties' %}">county or city exceptions apply</a>.</p>
   <p><strong>Examples:</strong></p>
   <ul class="usa-list">
     <li>ElectionsShelbyTN.gov</li>
