Remove link to get.gov guidance because all of the guidance is already included

--- a/src/registrar/templates/includes/domain_example.html
+++ b/src/registrar/templates/includes/domain_example.html
@@ -65,18 +65,18 @@
   </ul>
 
 {% elif organization_type == 'city' %}
-  <p>Most city domains must include the two-letter state abbreviation or clearly spell out the state name unless <a href="{% public_site_url 'domains/choosing/#cities' %}">city exceptions apply</a>. Using phrases like “City of” or “Town of” is optional.</p>
-  <p><strong>Examples:</strong></p>
-    <ul class="usa-list">
-      <li>CityofEudoraKS.gov</li>
-      <li>Pocatello.gov</li>
-      <li>WallaWallaWA.gov</li>
-    </ul>
-  <p>Some cities don’t have to refer to their state.
+  <p>Most city domains must include the two-letter state abbreviation or clearly spell out the state name. Using phrases like “City of” or “Town of” is optional.</p>
+  <p>Cities that meet one of the criteria below don’t have to refer to their state in their domain name.
     <ul class="usa-list">
       <li>City names that are not shared by any other U.S. city, town, or village can be requested without referring to the state. We use the <a href="https://www.census.gov/geographies/reference-files/time-series/geo/gazetteer-files.html">Census Bureau’s National Places Gazetteer Files</a> to determine if names are unique.</li>
       <li>Certain cities are so well-known that they may not require a state reference to communicate location. We use the list of U.S. “dateline cities” in the Associated Press Stylebook to make this determination.</li>
       <li>The 50 largest cities, as measured by population according to the Census Bureau, can have .gov domain names that don’t refer to their state.</li>
+    </ul>
+ <p><strong>Examples:</strong></p>
+    <ul class="usa-list">
+      <li>CityofEudoraKS.gov</li>
+      <li>Pocatello.gov</li>
+      <li>WallaWallaWA.gov</li>
     </ul>
   </p>
 
