--- a/src/registrar/templates/admin/change_list.html
+++ b/src/registrar/templates/admin/change_list.html
@@ -7,7 +7,11 @@
         {% if cl.get_ordering_field_columns %}
             sorted
         {% endif %}
-        results
+        {% if cl.result_count == 1 %}
+            result
+        {% else %}
+            results
+        {% endif %}
         {% if filters %}
             filtered by
                 {% for filter_param in filters %}
