Change investigating to in review

--- a/src/registrar/templates/application_status.html
+++ b/src/registrar/templates/application_status.html
@@ -20,7 +20,7 @@
              Status:
           </span>
           {% if domainapplication.status == 'approved' %} Approved 
-          {% elif domainapplication.status == 'investigating' %} In Review 
+          {% elif domainapplication.status == 'in review' %} In Review 
           {% elif domainapplication.status == 'submitted' %} Received
           {% else %}ERROR Please contact technical support/dev
           {% endif %}
