Edit templates for table and checkbox accessibility, lightly edit layout styles for added ths, unit tests

--- a/src/registrar/assets/sass/_theme/styles.scss
+++ b/src/registrar/assets/sass/_theme/styles.scss
@@ -9,3 +9,7 @@
 /*--------------------------------------------------
 --- Custom Styles ---------------------------------*/
 @forward "uswds-theme-custom-styles";
+
+/*--------------------------------------------------
+--- Admin ---------------------------------*/
+@forward "admin";
