started adding the security info

--- a/src/registrar/templates/django/admin/domain_change_form.html
+++ b/src/registrar/templates/django/admin/domain_change_form.html
@@ -3,6 +3,8 @@
 {% block field_sets %}
     <div class="submit-row">
         <input type="submit" value="Place hold" name="_place_client_hold">
+        <input type="submit" value="Place hold" name="_get_security_email">
+        <input type="submit" value="Place hold" name="_set_security_contact">
     </div>
     {{ block.super }}
 {% endblock %}
